--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -15,7 +15,7 @@ en:
       not_found_in_database: "Invalid email address or password."
       timeout: "Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      unconfirmed: "You must confirm your email address before continuing."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
